--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -11,11 +11,15 @@
     "test": "jest ./"
   },
   "dependencies": {
+    "axios": "^1.3.1",
+    "bootstrap": "^5.2.3",
     "dotenv": "^16.0.2",
     "eslint-config-prettier": "^8.5.0",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-bootstrap": "^2.7.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.0"
   },
   "devDependencies": {
     "@testing-library/react": "^13.3.0",
