--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@evilmartians/lefthook": "^1.1.1",
+    "@types/react": "^18.0.28",
     "lerna": "^5.4.3"
   }
 }
