--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -17,5 +17,8 @@
     "jsx": "react-jsx"
   },
   "include": ["src"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "references": [{ "path": "./tsconfig.node.json" }],
+  "typeRoots": [
+    "./@types","./node_modules/@types"
+  ]
 }
