--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -26,6 +26,7 @@
     "@types/jest": "~28.1.8",
     "@types/react": "~18.0.17",
     "@types/react-dom": "~18.0.6",
+    "@types/react-test-renderer": "18.0.0",
     "@typescript-eslint/eslint-plugin": "~5.35.1",
     "@typescript-eslint/parser": "~5.35.1",
     "@vitejs/plugin-react": "~2.0.1",
@@ -34,6 +35,7 @@
     "jest-environment-jsdom": "~29.0.1",
     "lefthook": "~1.1.1",
     "prettier": "~2.7.1",
+    "react-test-renderer": "18.2.0",
     "sass": "~1.58.0",
     "ts-jest": "~28.0.8",
     "typescript": "~4.8.2",
