--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,9 @@
 {
-  "singleQuote": true,
+  "tabWidth": 2,
+  "useTabs": false,
   "semi": true,
-  "arrowParens": "avoid",
-  "bracketSameLine": true,
-  "width": 50
+  "singleQuote": true,
+  "trailingComma": "all",
+  "printWidth": 80,
+  "endOfLine": "auto"
 }
