--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -11,6 +11,7 @@
     "test": "jest ./"
   },
   "dependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
     "axios": "~1.3.1",
     "bootstrap": "~5.2.3",
     "dotenv": "~16.0.2",
