--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@evilmartians/lefthook": "^1.1.1",
+    "canvas": "^2.11.0",
     "lerna": "^5.4.3"
   },
   "dependencies": {
