--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "find-a-pair",
   "private": true,
+  "jsx": "react",
   "scripts": {
     "bootstrap": "yarn && node init.js && lerna clean && yarn && lerna bootstrap",
     "build": "lerna run build",
