--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,8 @@ version: "3.9"
 
 services:
     client:
-        container_name: prakticum-client
-        image: prakticum-client
+        container_name: find-a-pair-client
+        image: find-a-pair-client
         build:
             context: .
             dockerfile: Dockerfile.client
@@ -16,8 +16,8 @@ services:
           - CLIENT_PORT=${CLIENT_PORT}
           - SERVER_PORT=${SERVER_PORT}
     server:
-        container_name: prakticum-server
-        image: prackicum-server
+        container_name: find-a-pair-server
+        image: find-a-pair-server
         build:
             context: .
             dockerfile: Dockerfile.server
