--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -4,7 +4,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build --config vite.config.ts",
+    "build:ssr": "tsc && vite build --config ssr.config.ts",
     "preview": "vite preview",
     "lint": "eslint .",
     "format": "prettier --write .",
@@ -19,6 +20,7 @@
     "react": "~18.2.0",
     "react-bootstrap": "~2.7.0",
     "react-dom": "~18.2.0",
+    "react-hot-loader": "^4.13.1",
     "react-router-dom": "~6.8.0",
     "redux-persist": "^6.0.0"
   },
