--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -14,8 +14,14 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "types": ["node"],
+    "typeRoots": [
+      "@types",
+      "./node_modules/@types"
+    ]
   },
-  "include": ["src"],
+  "include": ["src", "index.d.ts"],
+  "exclude": ["node_modules"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
