--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -22,6 +22,13 @@
     ]
   },
   "include": ["src", "index.d.ts"],
-  "exclude": ["node_modules"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "exclude": [
+    "node_modules",
+    "**/*.test.tsx"
+  ],
+  "references": [
+    {
+      "path": "./tsconfig.node.json"
+    }
+  ]
 }
