ssr vite починил dev

--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -24,7 +24,7 @@
     },
     "outDir": "dist"
   },
-  "include": ["./index.d.ts", "./index.tsx"],
+  "include": ["./index.d.ts", "./index.ts"],
   "exclude": [
     "dist",
     "node_modules",
