--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -4,7 +4,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build --config vite.config.ts",
+    "link-client": "yarn link",
+    "build": "yarn build:ssr && yarn build:vite",
+    "build:vite": "tsc && vite build --config vite.config.ts",
     "build:ssr": "tsc && vite build --config ssr.config.ts",
     "preview": "vite preview",
     "lint": "eslint .",
