--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -15,7 +15,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "types": ["node"],
+    "types": ["node", "jest"],
     "typeRoots": [
       "@types",
       "./node_modules/@types"
