--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -23,7 +23,7 @@
   },
   "devDependencies": {
     "@testing-library/react": "~13.3.0",
-    "@types/jest": "~28.1.8",
+    "@types/jest": "^29.5.0",
     "@types/react": "~18.0.17",
     "@types/react-dom": "~18.0.6",
     "@types/react-test-renderer": "18.0.0",
