--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -20,5 +20,6 @@
   "references": [{ "path": "./tsconfig.node.json" }],
   "typeRoots": [
     "./@types","./node_modules/@types"
-  ]
+  ],
+  "types": ["node", "jest"]
 }
