--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -18,8 +18,6 @@
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }],
-  "typeRoots": [
-    "./@types","./node_modules/@types"
-  ],
+  "typeRoots": ["./@types", "./node_modules/@types"],
   "types": ["node", "jest"]
 }
