--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -18,10 +18,11 @@
     "types": ["node", "jest"],
     "typeRoots": [
       "@types",
-      "./node_modules/@types"
+      "./node_modules/@types",
+      "./client.d.ts"
     ]
   },
-  "include": ["src", "index.d.ts"],
+  "include": ["src", "ssr.tsx", "ssr.config.ts"],
   "exclude": [
     "node_modules",
     "**/*.test.tsx"
