--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -35,7 +35,8 @@
     "prettier": "^2.7.1",
     "ts-jest": "^28.0.8",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.2"
+    "typescript": "^4.8.2",
+    "vite": "4.2.1"
   },
   "license": "MIT"
 }
