--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
     environment:
       - CLIENT_PORT=${CLIENT_PORT}
       - SERVER_PORT=${SERVER_PORT}
+    networks:
+      - awesome
   server:
     container_name: find-a-pair-server
     image: find-a-pair-server
@@ -28,6 +30,8 @@ services:
       - "${SERVER_PORT}:${SERVER_PORT}"
     environment:
       SERVER_PORT: ${SERVER_PORT}
+    networks:
+      - awesome
   postgres:
     image: postgres:15.1
     ports:
@@ -39,6 +43,8 @@ services:
     volumes:
       - ./tmp/pgdata:/var/lib/postgresql/data
     restart: always
+    networks:
+      - awesome
   pgadmin:
     image: dpage/pgadmin4:6.21
     restart: always
@@ -52,7 +58,13 @@ services:
       - pgadmin-data:/var/lib/pgadmin
     depends_on:
       - postgres
+    networks:
+      - awesome
 
 volumes:
   db-data:
   pgadmin-data:
+
+networks:
+  awesome:
+    driver: bridge
