Правки по замечаниям

--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -26,4 +26,10 @@
     },
     "outDir": "dist"
   },
+  "include": ["./index.d.ts", "./index.ts"],
+  "exclude": [
+    "dist",
+    "node_modules",
+    "**/*.test.ts"
+  ]
 }
