--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.2",
     "eslint-config-prettier": "^8.5.0",
     "express": "^4.18.1",
+    "http-proxy-middleware": "^2.0.6",
     "pg": "^8.8.0",
     "prettier": "^2.7.1",
     "reflect-metadata": "^0.1.13",
@@ -32,7 +33,6 @@
     "@typescript-eslint/parser": "^5.35.1",
     "babel-jest": "^29.0.1",
     "eslint": "^8.23.0",
-    "http-proxy-middleware": "2.0.6",
     "jest": "^28",
     "nodemon": "^2.0.19",
     "prettier": "^2.7.1",
