--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -14,6 +14,7 @@
     "test": "jest ./"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.2",
     "axios": "~1.3.1",
     "bootstrap": "~5.2.3",
     "dotenv": "~16.0.2",
@@ -24,6 +25,7 @@
     "react-dom": "~18.2.0",
     "react-hot-loader": "^4.13.1",
     "react-router-dom": "~6.8.0",
+    "react-redux": "^8.0.5",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
@@ -43,7 +45,7 @@
     "sass": "~1.58.0",
     "ts-jest": "~28.0.8",
     "typescript": "~4.8.2",
-    "vite": "~3.0.7"
+    "vite": "^4.2.1"
   },
   "license": "MIT"
 }
