--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,8 +28,15 @@ services:
     restart: always
     ports:
       - "${SERVER_PORT}:${SERVER_PORT}"
+    depends_on:
+      postgres:
+        condition: service_healthy
     environment:
       SERVER_PORT: ${SERVER_PORT}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_HOST: ${POSTGRES_HOST}
     networks:
       - awesome
   postgres:
@@ -45,6 +52,11 @@ services:
     restart: always
     networks:
       - awesome
+    healthcheck:
+          test: [ "CMD-SHELL", "pg_isready -d $POSTGRES_DB -U $POSTGRES_USER" ]
+          interval: 10s
+          timeout: 5s
+          retries: 5
   pgadmin:
     image: dpage/pgadmin4:6.21
     restart: always
