--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "~1.3.1",
     "bootstrap": "~5.2.3",
+    "clsx": "^1.2.1",
     "dotenv": "~16.0.2",
     "eslint-config-prettier": "~8.5.0",
     "prettier": "~2.7.1",
