--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -19,13 +19,14 @@
     "bootstrap": "~5.2.3",
     "dotenv": "~16.0.2",
     "eslint-config-prettier": "~8.5.0",
+    "jest-canvas-mock": "^2.5.0",
     "prettier": "~2.7.1",
     "react": "~18.2.0",
     "react-bootstrap": "~2.7.0",
     "react-dom": "~18.2.0",
     "react-hot-loader": "^4.13.1",
-    "react-router-dom": "~6.8.0",
     "react-redux": "^8.0.5",
+    "react-router-dom": "~6.8.0",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
