--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -17,6 +17,7 @@
     "eslint-config-prettier": "^8.5.0",
     "express": "^4.18.1",
     "http-proxy-middleware": "^2.0.6",
+    "jest-canvas-mock": "^2.5.0",
     "pg": "^8.8.0",
     "prettier": "^2.7.1",
     "reflect-metadata": "^0.1.13",
