--- a/.env.sample
+++ b/.env.sample
@@ -3,6 +3,7 @@ SERVER_PORT=3001
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=postgres
+POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
 PGADMIN_EMAIL=admin@admin.com
 PGADMIN_PASSWORD=password
