--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,26 +42,17 @@ services:
     build:
       context: .
       dockerfile: nginx.Dockerfile
-#      args:
-#        CLIENT_PORT: ${CLIENT_PORT}
+      args:
+        CLIENT_PORT: ${CLIENT_PORT}
     ports:
       - "80:80"
       - "443:443"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/conf.d
-      - ./data/certbot/conf:/etc/letsencrypt
-      - ./data/certbot/www:/var/www/certbot
-      - ./public:/usr/share/nginx/html
+      - ./nginx/certs:/etc/nginx/certs
     restart: always
     depends_on:
       - server
-  certbot:
-    image: certbot/certbot
-    restart: unless-stopped
-    volumes:
-      - ./data/certbot/conf:/etc/letsencrypt
-     - ./data/certbot/www:/var/www/certbot
-    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
 
 volumes:
   pgadmin-data:
