--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,8 +2,22 @@ events {
 }
 
 http {
+
     server {
-        listen 3000 default_server;
+        listen 80;
+        server_tokens off;
+
+        location / {
+            return 301 https://server:3001/$request_uri;
+        }
+    }
+    server {
+;         listen 3000 default_server;
+        ssl_certificate /etc/nginx/certs/certificate.crt;
+        ssl_certificate_key /etc/nginx/certs/certificate.key;
+        ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+        listen 443 ssl;
+
         location / {
             proxy_pass http://server:3001;
         }
